Begin port from java8 tijavalib
Add some comm.serial file. Need some tests

--- a/fx-test/fx-four-signal/src/main/resources/com/ti/desktop/panebutton.fxml
+++ b/fx-test/fx-four-signal/src/main/resources/com/ti/desktop/panebutton.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.BorderPane?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" style="-fx-border-color: blue; -fx-border-width: 3;">
-    <center>
+    <bottom>
         <StackPane style="-fx-border-color: red; -fx-border-width: 3;">
             <Button text="Нажми меня!" />
         </StackPane>
-    </center>
+    </bottom>
 </BorderPane>
