Start to add RemgControl panel (gradle fail)

--- a/fx-test/fx-four-signal/src/main/resources/com/ti/desktop/remg.fxml
+++ b/fx-test/fx-four-signal/src/main/resources/com/ti/desktop/remg.fxml
@@ -41,7 +41,7 @@
   </left>
 
 
-<!--  <bottom>-->
-<!--    <fx:include fx:id="controlPanel"  source="ControlPanel.fxml"/>-->
-<!--  </bottom>-->
+  <bottom>
+    <fx:include fx:id="controlPanel"  source="RemgControlPanel.fxml"/>
+  </bottom>
 </BorderPane>
