Puml test, terminal functional, serial string test
1) Add WebViewTerminal as terminal with highlight keywords
2) Test ByteFlowProtocol as protocol for string command
3) test PlantUML diagramm in project

*reject from richtext lib

--- a/fx-test/fx-four-signal/src/main/resources/com/ti/desktop/remg.fxml
+++ b/fx-test/fx-four-signal/src/main/resources/com/ti/desktop/remg.fxml
@@ -28,9 +28,10 @@
 
 
   <left>
-    <VBox alignment="TOP_CENTER" prefHeight="202.0" prefWidth="157.0">
+    <VBox alignment="TOP_CENTER" prefHeight="202.0" prefWidth="200.0">
       <children>
-        <TextField fx:id="portname" prefWidth="66.0" />
+<!--        <TextField fx:id="portname" prefWidth="66.0" />-->
+        <fx:include fx:id="remgControlPanel"  source="RemgControlPanel.fxml"/>
 <!--        <Button mnemonicParsing="false" onAction="#reopen" text="ReopenPort" />-->
 <!--        <Button mnemonicParsing="false" onAction="#changeState" text="EmulateStateChange" />-->
       </children>
@@ -42,6 +43,6 @@
 
 
   <bottom>
-    <fx:include fx:id="controlPanel"  source="RemgControlPanel.fxml"/>
+
   </bottom>
 </BorderPane>
