--- a/fx-test/fx-four-signal/src/main/resources/com/ti/desktop/RemgControlPanel.fxml
+++ b/fx-test/fx-four-signal/src/main/resources/com/ti/desktop/RemgControlPanel.fxml
@@ -5,33 +5,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import org.fxmisc.richtext.CodeArea?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="com.ti.remg.RemgControlController">
-  <left>
-    <!--<fx:include fx:id="chartmc1" source="charttest/chart.fxml"/>-->
-  </left>
-  <padding>
-    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-  </padding>
-  <right>
-    <!--<fx:include fx:id="chartmc2" source="charttest/chart.fxml"/>-->
-  </right>
-  <top>
-    <VBox spacing="20.0">
-      <HBox alignment="CENTER">
-      </HBox>
-      <HBox alignment="CENTER">
-      </HBox>
-      <HBox alignment="CENTER">
-      </HBox>
-      <HBox alignment="CENTER">
-      </HBox>
-      <HBox alignment="CENTER" VBox.margin="$x2">
-      </HBox>
-      <padding>
-        <Insets bottom="10.0" top="10.0" />
-      </padding>
-      <HBox alignment="CENTER" prefHeight="42.0" prefWidth="458.0">
-      </HBox>
+  <center>
+    <VBox spacing="10.0">
+      <StackPane style="-fx-border-color: red; -fx-border-width: 2;">
+        <CodeArea fx:id="terminal" wrapText="true" prefWidth="400" />
+      </StackPane>
     </VBox>
-  </top>
+  </center>
 </BorderPane>
